--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,19 @@
+.introduction {
+    max-width: 1000px;
+    margin: auto;
+    margin-top: 20px;
+}
+
+.button-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-list a {
+    margin: 0.4rem 0;
+}
+
 table {
     border-spacing: 0;
     border: 1px solid black;
